testdata/baselines/reference/submodule/conformance/decoratorOnClassMethod5.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2318: Cannot find global type 'TypedPropertyDescriptor'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
decoratorOnClassMethod5.ts(1,75): error TS2304: Cannot find name 'TypedPropertyDescriptor'.
decoratorOnClassMethod5.ts(1,106): error TS2304: Cannot find name 'TypedPropertyDescriptor'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2318: Cannot find global type 'TypedPropertyDescriptor'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== decoratorOnClassMethod5.ts (2 errors) ====
    declare function dec(): <T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>) => TypedPropertyDescriptor<T>;
                                                                              ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypedPropertyDescriptor'.
                                                                                                             ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypedPropertyDescriptor'.
    
    class C {
        @dec() ["method"]() {}
    }